[metadata]
name = pyenemizer-alwaysintreble
version = 0.0.1
author = alwaysintreble
author_email = mmmcheese158@gmail.com
description = Python package for A Link to the Past Enemizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alwaysintreble/PyEnemizer
project_urls =
    Bug Tracker = https://github.com/alwaysintreble/PyEnemizer/issues
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
